syntax = "proto3";

package p2p.v1;

import "types/v1/artifact.proto";
import "types/v1/consensus.proto";
import "types/v1/types.proto";

message StrippedBlockProposal {
}

message StrippedConsensusMessage {
  oneof msg {
    StrippedBlockProposal stripped_block_proposal = 1;
    types.v1.ConsensusMessage unstripped = 2;
  }
}

message StrippedConsensusMessageId  {
  types.v1.ConsensusMessageId unstripped_id = 1;
}
